# pyenda

./: .gitignore  compile_sass.py  manage.py  pyproject.toml
src/: db.sqlite3
src/app_teste/: apps.py  views.py
src/app_teste/templates/app_teste/: base.html
src/componentes/: apps.py  views.py
src/componentes/templates/componentes/: card.html
src/componentes/templatetags/: componentes_tag.py
src/config/: settings.py  urls.py
src/static/css/: custom.css
src/static/scss/: custom.scss
