[project]
name = "pyenda"
version = "0.1.0"
description = "Ambiente Base-Digital"
authors = [
    {name = "Aurora", email = "gdcm10@gmail.com"}
]
# A linha 'readme' foi removida para não exigir o arquivo
requires-python = ">=3.11"
dependencies = [
    "django (<6.0)",
    "libsass (>=0.23.0,<0.24.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"